Fixed coin alignment

--- a/styles/clicker.css
+++ b/styles/clicker.css
@@ -30,7 +30,7 @@
   position: relative;
   width: 35vh;
   aspect-ratio: 1 / 1;
-  margin: auto;
+  margin-top: 28vh;
   transform: scale(1);
   max-width: 400px;
   min-width: 10vh;
@@ -89,7 +89,7 @@
   font-size: clamp(1.5rem, 5vw, 3rem); 
   font-weight: bold;
   text-align: center;
-  margin-top: 10px;
+  margin-top: 20px;
   width: 90vw;
   max-width: 400px;
   overflow-wrap: break-word;
